misc/pod-initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-initcontainer
  namespace: studentx-test2
  labels:
    app: MyApp
    tier: frontend
spec:
  containers:
    - name: myapp-container
      image: nginxdemos/hello:latest
