misc/pod-sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-sidecar
  namespace: studentx-test2
  labels:
    app: MyApp
    tier: frontend
spec:
  containers:
    - name: myapp-container
      image: nginxdemos/hello:latest
      volumeMounts:
      - name: shared-data
        mountPath: /usr/share/nginx/html

    - name: sidecar-container
      image: busybox:1.28
      command: ['sh', '-c', 'while true; do echo "Hello from the sidecar container" > /pod-data/index.html && sleep 3 ; done']
      volumeMounts:
      - name: shared-data
        mountPath: /pod-data

  volumes:
  - name: shared-data
    emptyDir: {}
