misc/probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-myapp
  namespace: studentx-test2

spec:
  replicas: 3

  selector:
    matchLabels:
      app: MyApp
      tier: frontend

  strategy:
    type: RollingUpdate
    rollingUpdate:
     maxUnavailable: 25%

  template:
    metadata:
      labels:
        app: MyApp
        tier: frontend

    spec:
      containers:
      - name: myapp-container
        image: nginxdemos/hello:latest

        resources:
          requests:
            memory: "16M"
            cpu: "50m"
            ephemeral-storage: "512M"
          limits:
            memory: "128M"
            cpu: "500m"
            ephemeral-storage: "512M"

        startupProbe:
          tcpSocket:
            port: 80
          failureThreshold: 12
          periodSeconds: 10

        livenessProbe:
          tcpSocket:
            port: 80
          periodSeconds: 60
          failureThreshold: 1
          initialDelaySeconds: 0

        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          failureThreshold: 3
          initialDelaySeconds: 0
          timeoutSeconds: 5
