misc/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-myapp
  namespace: studentx-test2

spec:
  replicas: 3

  selector:
    matchLabels:
      app: MyApp
      tier: frontend

  strategy:
    type: RollingUpdate
    rollingUpdate:
     maxUnavailable: 25%

  template:
    metadata:
      labels:
        app: MyApp
        tier: frontend

    spec:
      containers:
      - name: myapp-container
        image: nginxdemos/hello:latest
        resources:
          requests:
            memory: "16M"
            cpu: "50m"
            ephemeral-storage: "512M"
          limits:
            memory: "128M"
            cpu: "500m"
            ephemeral-storage: "512M"
