misc/svc-myapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-myapp
  namespace: studentx-test2
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: MyApp
    tier: frontend
